# openedx-ai-extensions

./: .gitignore  CHANGELOG.md  CHANGELOG.rst  README.md  README.rst  catalog-info.yaml  pyproject.toml  setup.cfg
.github/workflows/: bumpversion.yml  ci.yml  integration-test-trigger.yml  integration-tests.yml  release.yml
backend/: .annotation_safe_list.yml  .coveragerc  .gitignore  MANIFEST.in  Makefile  codecov.yml  integration_test_settings.py  setup.py  test_settings.py  tox.ini
backend/openedx_ai_extensions/: __init__.py  admin.py  apps.py  decorators.py  models.py  receivers.py  signals.py  tasks.py  urls.py  utils.py  views.py  xapi_event.py
backend/requirements/: base.in  base.txt  ci.txt  constraints.txt  dev.txt  doc.in  doc.txt  pip-tools.txt  pip.txt  quality.txt  test.in  test.txt
backend/tests/: conftest.py  test_api.py  test_base_orchestrator.py  test_component_extractors.py  test_content_libraries_processor.py  test_course_outline_processor.py  test_direct_orchestrator.py  test_educator_assistant_processor.py  test_edxapp_wrapper.py  test_flashcards_orchestrator.py  test_functions.py  test_integration_base_profiles.py  test_litellm_base_processor.py  test_llm_functions.py  test_llm_processor.py  test_models.py  test_openedx_processor.py  test_plugin_integration.py  test_providers.py  test_receivers.py  test_submission_processor.py  test_template_utils.py  test_workflows.py  test_xapi.py  test_xblock_service.py
docs/: Makefile  conf.py  index.rst  make.bat  testing.rst
docs/concepts/: framework_concepts.rst  index.rst
docs/decisions/: 0001-purpose-of-this-repo.rst  0002-dynamic-workflow-configuration.rst  0003-xapi-event-tracking.rst  0004-xblock-ai-service.rst  (+8 more)
frontend/: .npmignore  Makefile  README.md  babel.config.js  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
tutor/: .hatch_build.py  pyproject.toml  setup.py
tutor/openedx_ai_extensions/: plugin.py
tutor/openedx_ai_extensions/patches/: mfe-dockerfile-post-npm-install-authoring  mfe-dockerfile-post-npm-install-learning  mfe-dockerfile-pre-npm-install-authoring  mfe-dockerfile-pre-npm-install-learning  mfe-env-config-buildtime-imports  mfe-env-config-runtime-definitions-authoring  mfe-env-config-runtime-definitions-learning  openedx-auth  openedx-common-settings  openedx-dev-dockerfile-post-python-requirements  openedx-dockerfile-post-python-requirements
(+310 files in other folders)
