# https://packaging.python.org/en/latest/tutorials/packaging-projects/
# https://hatch.pypa.io/latest/config/build/

[project]
name = "openedx-ai-extensions"
license = {text = "AGPL-3.0-only"}
requires-python = ">=3.11"
authors = [
    {name = "The Open edX Community"},
    {email = "oscm@axim.org"}
]
maintainers = [
    {name = "The Open edX Community"},
    {email = "oscm@axim.org"}
]
description = "AI Extensibility Framework plugin for Tutor"
readme = {file = "../README.rst", content-type = "text/x-rst"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "tutor>=20.0.0,<21.0.0",
    "tutor-mfe>=20.0.0,<21.0.0",
]

# these fields will be set by .hatch_build.py
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "tutor[dev]>=20.0.0,<21.0.0",
    "pylint",
]

[project.entry-points."tutor.plugin.v1"]
openedx-ai-extensions = "openedx_ai_extensions.plugin"

# https://packaging.python.org/en/latest/specifications/well-known-project-urls/#well-known-labels
[project.urls]
Homepage = "https://github.com/openedx/openedx-ai-extensions"
Documentation = "https://github.com/openedx/openedx-ai-extensions/blob/main/README.rst"
Code = "https://github.com/openedx/openedx-ai-extensions"
Issues = "https://github.com/openedx/openedx-ai-extensions/issues"
Changelog = "https://github.com/openedx/openedx-ai-extensions/blob/main/CHANGELOG.rst"
Community = "https://discuss.openedx.org"

# hatch-specific configuration
[tool.hatch.metadata.hooks.custom]
path = ".hatch_build.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
# Disable strict naming, otherwise twine is not able to detect name/version
strict-naming = false
include = ["/openedx_ai_extensions", ".hatch_build.py"]
exclude = ["tests*"]

[tool.hatch.build.targets.wheel]
packages = ["openedx_ai_extensions"]

# F401: unused-import
# F841: unused-variable
# W292: missing-newline-at-end-of-file
extend-select = ["F401", "F841", "W292"]
